--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -6,7 +6,7 @@
 </div>
 
 <div id="footer" role="contentinfo">
-  <p>{{tpl:SysPoweredBy}} - {{tpl:lang Theme}} Noviny2</p>
+  <p>{{tpl:SysPoweredBy}} - {{tpl:lang Theme}} Noviny2 - {{tpl:lang By}} <a href="https://github.com/brol/noviny2">Pierre Van Glabeke</a></p>
 </div>
 
 {{tpl:SysBehavior behavior="publicFooterContent"}}
