--- a/tpl/_top.html
+++ b/tpl/_top.html
@@ -17,6 +17,7 @@
   <input type="submit" value="ok" class="submit" /></p>
   </div></form>
 
-  <div id="nav" role="navigation">{{tpl:SimpleMenu description="title"}}</div>
+  <nav role="navigation">{{tpl:SimpleMenu id="navsm" description="title"}}</nav>
+  <nav role="navigation" id="nav">{{tpl:MenuFreshy level="0"}}</nav>
 </div>
 </div>
