--- a/tpl/_top.html
+++ b/tpl/_top.html
@@ -17,7 +17,7 @@
   <input type="submit" value="ok" class="submit" /></p>
   </div></form>
 
-  <nav role="navigation">{{tpl:SimpleMenu id="navsm" description="title"}}</nav>
+  {{tpl:SimpleMenu id="navsm" description="title"}}
   <nav role="navigation" id="nav">{{tpl:MenuFreshy level="0"}}</nav>
 </div>
 </div>
