--- a/tpl/inc-news.html
+++ b/tpl/inc-news.html
@@ -1,7 +1,7 @@
 <tpl:Entries no_category="1" lastn="4">
   <tpl:EntriesHeader><div class="news"><h2>{{tpl:lang Breaking news}}</h2></tpl:EntriesHeader>
   <h3><a href="{{tpl:EntryURL}}">{{tpl:EntryTitle encode_html="1"}}</a></h3>
-  <p>{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="120"}}...
+  <p>{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="120"}}<span class="readmore-ellipsis">...</span>
     <tpl:EntryIf operator="or" show_comments="1" show_pings="1">
     <span class="comment-count"><span> | {{tpl:lang Comments:}}</span>
       <a href="{{tpl:EntryURL}}#comments" title="{{tpl:EntryCommentCount count_all="1"}}">{{tpl:EntryCommentCount count_all="1" none="%s" one="%s" more="%s"}}</a></span>
