--- a/tpl/post.html
+++ b/tpl/post.html
@@ -28,9 +28,8 @@
   <script type="application/json" id="dc_post_remember_str-data">
     {"post_remember_str": "{{tpl:lang Remember me on this blog}}"}
   </script>
-  <script type="text/javascript" src="{{tpl:BlogQmarkURL}}pf=util.js"></script>
-  <script type="text/javascript" src="{{tpl:BlogQmarkURL}}pf=post.js"></script>
-  <script type="text/javascript">
+  <script src="{{tpl:BlogQmarkURL}}pf=post.js"></script>
+  <script>
   $(document).ready(function() {
   if ($('#pr').is(':visible')) {jQuery('.hidecomment-form').show()} else {$(".hidecomment-form").hide()};
   $("#comment-form h3").click(function() {
@@ -153,8 +152,7 @@
     </tpl:SysIfCommentPublished>
 
     <tpl:SysIfCommentPending>
-      <p class="message" id="pr">{{tpl:lang Your comment has been submitted and
-      will be reviewed for publication.}}</p>
+      <p class="message" id="pr">{{tpl:lang Your comment has been submitted and will be reviewed for publication.}}</p>
     </tpl:SysIfCommentPending>
 
     <!-- # Comment form -->
