--- a/tpl/_top.html
+++ b/tpl/_top.html
@@ -1,7 +1,7 @@
 <div id="top" role="banner">
 <div id="header">
   <h1><span><a href="{{tpl:BlogURL}}">{{tpl:BlogName encode_html="1"}}</a></span></h1>
-  <p id="blogdesc">{{tpl:BlogDescription encode_html="1"}}</p>
+  <div id="blogdesc">{{tpl:BlogDescription}}</div>
 
   <p id="prelude" role="navigation"><a href="#main">{{tpl:lang To content}}</a> |
   <a href="#sidebar">{{tpl:lang To menu}}</a> |
